# autoAI

./: .gitignore  LICENSE  README.md
core/: Cargo.toml
core/config/: config.toml
core/src/: config.rs  error.rs  main.rs
core/src/agent/: agent.rs  mod.rs  runtime.rs
core/src/io/: input.rs  mod.rs  output.rs  voice.rs
core/src/llm/: mod.rs  ollama.rs
